--- a/main.css
+++ b/main.css
@@ -104,6 +104,7 @@ body{
   margin: 2px auto;
   padding: 15px;
   background-color: #e5e4e4;
+  margin: 0 auto;
 }
 .gallery{
   color: #fff;
@@ -185,20 +186,6 @@ a.boxA:hover,a.boxB:hover{
   margin: 3% auto;
   width: 400px;
   color: #ffb25f;
-}
-#nav.affix {
-    position: fixed;
-    top: 0;
-    width: 100%
-}
-
-#nav > .navbar-inner {
-    border-left: 0;
-    border-right: 0;
-    border-radius: 0;
-    -webkit-border-radius: 0;
-    -moz-border-radius: 0;
-    -o-border-radius: 0;
 }
 .orangeShade-one{
   background-color: #ff9a2d;
