--- a/main.css
+++ b/main.css
@@ -23,7 +23,7 @@ img {
   opacity: 0.8;
 }
 .nav {
-  background-color: #ffb25f;
+  background-color: #373c43;
   height: 50px;
 }
 .nav a {
@@ -53,7 +53,7 @@ img {
 }
 
 .jumbotron {
-  background-color: #000000;
+  background-color: #00a086;
   height: auto;
 }
 
@@ -71,6 +71,7 @@ img {
 }
 .name{
   position: relative;
+  color: #fff;
 }
 
 .jumbotron p {
@@ -103,17 +104,17 @@ body{
   font-family: opensans;
 }
 .blogs, .resumeOn{
-  color: #fff;
+  color: #818283;
   margin: 2px auto;
   padding: 15px;
-  background-color: #5ab9a3;
+
 }
 
 .blogs, .resumeOn{
-  color: #fff;
+  color: #818283;
   margin: 2px auto;
   padding: 15px;
-  background-color: #5ab9a3;
+
 }
 .resumeOn{
   -webkit-column-count:2; /* Chrome, Safari, Opera */
@@ -131,7 +132,7 @@ body{
   color: #fff;
   margin: 2px auto;
   padding: 15px;
-  background-color: #d3d2d2;
+  background-color: #b6b6b6;
   height: 400px;
 }
 .gallery h3{
@@ -146,7 +147,7 @@ body{
   color: #fff;
   margin: 2px auto;
   padding: 15px;
-  background-color: #ffb25f;
+  background-color: #fe7b54;
 }
 .galleryhighlighted{
   color: #fff;
@@ -158,7 +159,7 @@ body{
   color: #fff;
   margin: 2px auto;
   padding: 15px;
-  background-color: #ffb25f;
+  background-color: #fe7b54;
 }
 .navrighthighlighted{
   margin: 2px auto;
@@ -177,7 +178,7 @@ body{
 }
 .boxB{
 
-  border-color: #ffffff;
+  border-color: #ffa387;
   border-style: solid;
   border-width: 1px;
   padding: 5px 5px;
@@ -216,7 +217,7 @@ a.boxC{
 
 a.boxB{
   text-decoration: none;
-  color:  #fff;
+  color:  #ffa387;
 }
 a.boxA:hover,a.boxB:hover{
   background-color: #fff;
@@ -275,7 +276,7 @@ a.boxC:hover{
   width: auto;
 }
 .blog{
-  background: #5ab9a3;
+  background: #fff;
 }
 h3{
   font-size: 30px;
@@ -286,9 +287,13 @@ h3{
 }
    .blogo img {
       width: 160px; 
-      height: auto;
+      height: 160px;
     }
-@media only screen and (min-width: 150px) and (max-width:600px){
+   .blogo {
+      color: #8e9c9d;
+
+    }
+  @media only screen and (min-width: 150px) and (max-width:600px){
 
     #navhid{
       display: none;
@@ -308,7 +313,7 @@ h3{
     }
    .blogo img {
       position: relative;
-      width: 80px;
+      width: 160px;
       height: auto;
     }
     .boxC{
